# link-for-later-service

./: .deepsource.toml  .gitignore  Cargo.toml  README.md  Shuttle.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: development.yml  lambda.yml  release.yml  shuttle.yml
link-for-later/: Cargo.toml  README.md
link-for-later-axum/: Cargo.toml  README.md
link-for-later-axum/src/: main.rs
link-for-later-lambda/: Cargo.toml  README.md
link-for-later-lambda/src/: main.rs
link-for-later-shuttle/: Cargo.toml  README.md
link-for-later-shuttle/src/: main.rs
link-for-later-types/: Cargo.toml
link-for-later-types/src/: dto.rs  entity.rs
link-for-later-types/src/dto/: response.rs
link-for-later-types/src/dto/request/: links.rs  users.rs
link-for-later-types/src/entity/: users.rs
link-for-later/src/: app.rs  auth.rs  controller.rs  dto.rs  lib.rs  repository.rs  service.rs  state.rs  types.rs
link-for-later/src/controller/: auth.rs  error.rs  extractors.rs  links.rs  responses.rs  users.rs
link-for-later/src/controller/routes/: links.rs  users.rs
link-for-later/src/dto/: auth.rs  response.rs
link-for-later/src/dto/request/: links.rs  users.rs
link-for-later/src/entity/: links.rs  users.rs
link-for-later/src/repository/: bare.rs  inmemory.rs  links.rs  mongodb.rs
link-for-later/src/service/: analysis.rs  links.rs  users.rs
link-for-later/src/types/: auth.rs  dto.rs  entity.rs  errors.rs  links.rs  repository.rs  request.rs  response.rs  state.rs
link-for-later/tests/: links.rs  users.rs
link-for-later/tests/app/: mod.rs
link-for-later/tests/auth/: mod.rs
link-for-later/tests/entity/: mod.rs
link-for-later/tests/repository/: inmemory.rs  mod.rs  mongodb.rs
link-for-later/tests/repository/mongodb/: mod.rs
src/: lib.rs  main.rs  repository.rs  router.rs  types.rs
src/controller/: link.rs  links.rs
src/repository/: links.rs  sample.rs
src/service/: links.rs
src/types/: errors.rs  links.rs  repository.rs  request.rs  response.rs  service.rs  state.rs
tests/: links.rs
