[package]
name = "link-for-later"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
#lambda_http = "0.8.3"
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "hyper1_upgrade" }
lambda_runtime = "0.8.3"
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

