[package]
name = "link-for-later"
version = "0.1.0"
edition = "2021"
description = "Link for Later Lambda Service"
repository = "https://github.com/kentSarmiento/link-for-later-service"
readme = "README.md"
license = "Apache-2.0"
publish = false

[dependencies]
axum = "0.7.2"
http-body-util = "0.1.0"
#lambda_http = "0.8.3"
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "hyper1_upgrade" }
lambda_runtime = "0.8.3"
serde = { version = "1.0.193", features = [ "derive" ] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tower = "0.4.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[dev-dependencies]
mockall = "0.12.0"

