[package]
name = "link-for-later-axum"
version = "0.1.0"
edition = "2021"
description = "Link for Later Service in Axum"
repository = "https://github.com/kentSarmiento/link-for-later-service"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
link-for-later = { path = "../link-for-later" }
tokio = { version = "1", features = ["macros"] }
tower = "0.4.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

