[package]
name = "link-for-later"
version = "0.1.0"
edition = "2021"
description = "Link for Later Service"
repository = "https://github.com/kentSarmiento/link-for-later-service"
publish = false

[dependencies]
axum = "0.7.2"
chrono = { version = "0.4.31", default-features = false, features=["clock", "serde"] }
http-body-util = "0.1.0"
mongodb = "2.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tower = "0.4.13"
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.12.0"

