[package]
name = "link-for-later"
version = "0.1.0"
edition = "2021"
description = "Link for Later Service"
repository = "https://github.com/kentSarmiento/link-for-later-service"
publish = false

[dependencies]
axum = "0.7.2"
axum-extra = { version = "0.9.0", default-features = false, features=["typed-header"] }
bson = "2.8.1"
chrono = { version = "0.4.31", default-features = false, features=["clock", "serde"] }
futures = "0.3.29"
http-body-util = "0.1.0"
jsonwebtoken = "9.2.0"
mongodb = "2.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tower = "0.4.13"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
mockall = "0.12.0"

